# win-ai-pit

./: .claude.md  .gitignore  LICENSE  Makefile  README.md  install.bat  kb.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: auto-merge-pitfalls.yml
docs/: design.md  dev-vs-runtime.md  notes.md  plan.md  test-plan.md  vscode-compatibility.md
pitfalls/: bat-chcp-65001-gbk.md  pitfall-4575696a.md  pitfall-906bdc3b.md  test.md  ultraedit-folder-shellex.md
pitfalls/encoding/: msys-utf8-to-gbk.md
pitfalls/filesystem/: desktop-path-symlink.md
pitfalls/msys/: backslash-swallowed.md  nul-to-dev-null.md
pitfalls/registry/: context-menu-locations.md  explorer-cache-refresh.md  special-char-keynames.md
pitfalls/services/: dynamic-service-registration.md
pyrite/: config.py  exceptions.py  github_auth.py
pyrite/models/: base.py  core_types.py  task.py
pyrite/plugins/: capabilities.py  registry.py
pyrite/schema/: field_schema.py  kb_schema.py  provenance.py
pyrite/server/: api.py  mcp_server.py  schemas.py  tool_schemas.py
pyrite/services/: clipper.py  embedding_service.py  export_service.py  hook_runner.py  kb_registry_service.py  kb_service.py  link_discovery_service.py  llm_rubric_evaluator.py  llm_service.py  qa_analytics_service.py  qa_service.py  schema_service.py  search_service.py  starred_service.py  task_service.py  template_service.py  version_service.py  worktree_service.py
pyrite/storage/: document_manager.py  index.py  queries.py  (+1 more)
pyrite_windows_pitfalls/: __init__.py  cli.py  plugin.py
scripts/: setup.py  start-mcp.bat
(+15 files in other folders)
